add Editor component

--- a/app/index.html
+++ b/app/index.html
@@ -6,4 +6,6 @@
         <link data-trunk rel="sass" href="css/index.scss" />
         <title>ruina.io</title>
     </head>
+    <body class="text-bg-dark">
+    </body>
 </html>
