--- a/app/index.html
+++ b/app/index.html
@@ -4,8 +4,12 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link data-trunk rel="sass" href="css/index.scss" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
         <title>ruina.io</title>
     </head>
     <body class="text-bg-dark">
+        <div class="visually-hidden">
+            <i class="bi bi-exclamation-triangle-fill"></i>
+        </div>
     </body>
 </html>
